TEST_PROGRAMS/VALID/08/switch.go
package main;
func main(){
    switch x := 1; x{
    case 1:
    case 2:
      x++;
    case 3,4:
    default:
    }
    switch {
    case true:
    case false:
    default:
      println("Hello World!");
    }
}
