TEST_PROGRAMS/INVALID/03/invalid_switch7.go
package main
func f() {
	switch tag {
	default:
		s3()
	case 0, 1, 2, 3:
		s1();
	}
	switch i { 
		case 1: package stuff // random package decl
	default:
		return x
	}
	switch {
	
	}
}
